# neurotic-crabs

./: Cargo.toml  index.html  neurotic_crabs-ad99fcd3d2cfaa4a.js  neurotic_crabs-ad99fcd3d2cfaa4a_bg.wasm
assets/: sw.js
src/: app.rs  main.rs
